crates/rsciter_macro/tests/compile_fail/enum_passport_test.rs
#[derive(rsciter::Passport)]
enum E {}

fn main() {}